Updated NB1 to fix some flags and add PDF

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -14,11 +14,12 @@
     "### Lesson Objectives\n",
     "\n",
     "Upon completing this notebook you should be able to understand and apply the following concepts:\n",
-    "1) How to set up your environment to use the Lucata toolchain to compile code\n",
-    "2) Understand the different Lucata tools including *emu-cc*, *emusim.x*, and various plotting helper scripts.\n",
-    "3) Be able to run a simple Hello World script that spawns Emu threads and then syncs the result.\n",
-    "4) Run a simulation with timing that generates statistics for plotting.\n",
-    "5) Look at and compare some simple spawn operations for the Lucata architecture."
+    "\n",
+    "- How to set up your environment to use the Lucata toolchain to compile code\n",
+    "- Understand the different Lucata tools including *emu-cc*, *emusim.x*, and various plotting helper scripts.\n",
+    "- Be able to run a simple Hello World script that spawns Emu threads and then syncs the result.\n",
+    "- Run a simulation with timing that generates statistics for plotting.\n",
+    "- Look at and understand a simple Cilk spawn operation for the Lucata architecture."
    ]
   },
   {
@@ -64,7 +65,8 @@
      "output_type": "stream",
      "text": [
       "/nethome/jyoung9/tutorial/lucata-pathfinder-tutorial/code\n",
-      "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n"
+      "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n",
+      "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\n"
      ]
     }
    ],
@@ -74,10 +76,13 @@
     "#Get the path to where all code samples are\n",
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
     "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.02/bin\",os.environ[\"PATH\"]])\n",
+    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
     "\n",
     "!echo $USER_NOTEBOOK_CODE\n",
     "#Print out which Emu compiler, emu-cc, we are using\n",
-    "!which emu-cc"
+    "!which emu-cc\n",
+    "#Print out the compiler flags we need to use the Lucata memoryweb headers and library\n",
+    "!echo \"Lucata compilation flags are $FLAGS\""
    ]
   },
   {
@@ -149,14 +154,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello-world-naive.mwx\n"
+      "hello-world.mwx\n",
+      "hello-world-naive.mwx\n",
+      "hello-world-spawn.mwx\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "cd ${USER_NOTEBOOK_CODE}/01-hello-world\n",
-    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
     "emu-cc -o hello-world-naive.mwx $FLAGS hello-world-naive.c\n",
     "ls *.mwx"
    ]
@@ -170,11 +175,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Fri Jul 15 15:30:38 2022\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:43:45 2022\n",
       "\n",
       "Hello, world!\n",
       "TID0 NODE 0 DIED NODE 0 FUNC @_Exit @cycle 7319\n",
-      "End untimed simulation with local date and time= Fri Jul 15 15:30:38 2022\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:43:45 2022\n",
       "\n"
      ]
     },
@@ -250,14 +255,13 @@
      "output_type": "stream",
      "text": [
       "hello-world.mwx\n",
-      "hello-world-naive.mwx\n"
+      "hello-world-naive.mwx\n",
+      "hello-world-spawn.mwx\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "#. /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
     "emu-cc -o hello-world.mwx $FLAGS hello-world.c\n",
     "ls *.mwx"
    ]
@@ -271,12 +275,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:43:47 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:43:47 2022\n",
       "\n",
       "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "Simulation @0 s with local date and time= Tue Aug  2 10:43:47 2022\n",
       "\n",
       "Hello, world!\n",
       "\n",
@@ -296,7 +300,6 @@
    ],
    "source": [
     "%%bash\n",
-    "#. /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
     "emusim.x -m 21 --total_nodes 1 -- hello-world.mwx"
    ]
   },
@@ -353,13 +356,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\n",
-      "Start untimed simulation with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:43:50 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:43:50 2022\n",
       "\n",
       "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "Simulation @0 s with local date and time= Tue Aug  2 10:43:50 2022\n",
       "\n",
       "Hello, world!\n",
       "\n",
@@ -386,8 +388,7 @@
    ],
    "source": [
     "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "\n",
     "emu-cc -o hello-world-spawn.mwx $FLAGS hello-world-spawn.c\n",
     "emusim.x --untimed -m 21 --total_nodes 1 -- hello-world-spawn.mwx\n",
     "ls hello-world-spawn*"
