Updated Notebook 1 - should be complete; Tweaked NB1.1 and NB3

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -16,10 +16,10 @@
     "Upon completing this notebook you should be able to understand and apply the following concepts:\n",
     "\n",
     "- How to set up your environment to use the Lucata toolchain to compile code\n",
-    "- Understand the different Lucata tools including *emu-cc*, *emusim.x*, and various plotting helper scripts.\n",
+    "- Understand the different Lucata tools including *emu-cc* and *emusim.x*.\n",
     "- Be able to run a simple Hello World script that spawns Emu threads and then syncs the result.\n",
-    "- Run a simulation with timing that generates statistics for plotting.\n",
-    "- Look at and understand a simple Cilk spawn operation for the Lucata architecture."
+    "- Run a simulation with timing that generates statistics.\n",
+    "    - Compare some basic statistics for a naive and \"Lucata-aware\" memory layout."
    ]
   },
   {
@@ -40,12 +40,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n"
+      "+ . /tools/emu/pathfinder-sw/set-lucata-env.sh\r\n",
+      "+ LUCATA_TOOLCHAIN_BASE=/tools/emu/pathfinder-sw\r\n",
+      "+ LUCATA_VERSION=22.02\r\n",
+      "+ export LUCATA_TOOLCHAIN_DIR=/tools/emu/pathfinder-sw/22.02\r\n",
+      "+ export PATH=/tools/emu/pathfinder-sw/22.02/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin/:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/nethome/jyoung9/go/bin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\r\n",
+      "+ export LD_LIBRARY_PATH=/tools/emu/pathfinder-sw/22.02/lib:\r\n",
+      "+ export LD_LIBRARY_PATH=/tools/emu/pathfinder-sw/22.02/lib::/usr/lib/x86_64-linux-gnu/\r\n",
+      "+ echo Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n",
+      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n",
+      "+ set +x\r\n"
      ]
     }
    ],
    "source": [
-    "!. /tools/emu/pathfinder-sw/set-lucata-env.sh"
+    "!set -x;. /tools/emu/pathfinder-sw/set-lucata-env.sh; set +x"
    ]
   },
   {
@@ -64,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/nethome/jyoung9/tutorial/lucata-pathfinder-tutorial/code\n",
+      "/nethome/jyoung9/tmp/lucata-pathfinder-tutorial/code\n",
       "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n",
       "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\n"
      ]
@@ -142,7 +151,13 @@
    "metadata": {},
    "source": [
     "###  Compilation and simulation for the Pathfinder\n",
-    "We'll test compiling this example to show the syntax and then move on to a more optimized example. Note that the .mwx output can be used for simulation and execution on the Pathfinder system."
+    "We'll test compiling this example to show the syntax and then move on to a more optimized example. Note that the .mwx output can be used for simulation and execution on the Pathfinder system. \n",
+    "\n",
+    "We use `emu-cc` to compiler and `emusim.x` to run a System-C simulation of the application running on a Pathfinder with the specified memory and node paramters.\n",
+    "\n",
+    "It is also important to understand the following details:  \n",
+    "* We defined $FLAGS up above to include the Lucata headers and libraries  \n",
+    "* emusim.x takes a few parameters including the memory size (-m 21 for 1 MB) and the number of nodes to simulate (--total_nodes <N>). You can try changing the memory size (21 to 28) or number of nodes (1 to 8) to see how the simulation changes."
    ]
   },
   {
@@ -154,9 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello-world.mwx\n",
-      "hello-world-naive.mwx\n",
-      "hello-world-spawn.mwx\n"
+      "hello-world-naive.mwx\n"
      ]
     }
    ],
@@ -175,11 +188,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Aug  2 10:43:45 2022\n",
+      "Start untimed simulation with local date and time= Wed Aug 31 14:10:59 2022\n",
       "\n",
       "Hello, world!\n",
-      "TID0 NODE 0 DIED NODE 0 FUNC @_Exit @cycle 7319\n",
-      "End untimed simulation with local date and time= Tue Aug  2 10:43:45 2022\n",
+      "End untimed simulation with local date and time= Wed Aug 31 14:10:59 2022\n",
       "\n"
      ]
     },
@@ -197,7 +209,7 @@
    "source": [
     "%%bash\n",
     "#Run a basic simulation with memory size 2^21, one node, and the naive Hello World executable as input\n",
-    "emusim.x --untimed -m 21 --total_nodes 1 -- hello-world-naive.mwx"
+    "emusim.x -m 21 --total_nodes 1 -- hello-world-naive.mwx"
    ]
   },
   {
@@ -246,6 +258,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compiling and Simulating Hello World with Replication\n",
+    "\n",
+    "Here we show how to compile the \"Lucata-aware\" hello world example and to run it with the simulator. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -255,8 +276,7 @@
      "output_type": "stream",
      "text": [
       "hello-world.mwx\n",
-      "hello-world-naive.mwx\n",
-      "hello-world-spawn.mwx\n"
+      "hello-world-naive.mwx\n"
      ]
     }
    ],
@@ -275,12 +295,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Aug  2 10:43:47 2022\n",
+      "Start untimed simulation with local date and time= Wed Aug 31 14:11:01 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Tue Aug  2 10:43:47 2022\n",
+      "End untimed simulation with local date and time= Wed Aug 31 14:11:01 2022\n",
       "\n",
       "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Tue Aug  2 10:43:47 2022\n",
+      "Simulation @0 s with local date and time= Wed Aug 31 14:11:01 2022\n",
       "\n",
       "Hello, world!\n",
       "\n",
@@ -309,7 +329,7 @@
    "source": [
     "## Hello World Spawn Example\n",
     "\n",
-    "That example kept one thread alive and migrating between nodelets.  This one, hello-world-spawn.c, uses Cilk's thread spawning intrinsic:\n",
+    "That example kept one thread alive and migrating between nodelets.  This next example, hello-world-spawn.c, uses Cilk's thread spawning intrinsic along with replicated memory.\n",
     "\n",
     "```c\n",
     "#include <stdlib.h>\n",
@@ -356,22 +376,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Aug  2 10:43:50 2022\n",
+      "Start untimed simulation with local date and time= Wed Aug 31 14:11:04 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Tue Aug  2 10:43:50 2022\n",
+      "End untimed simulation with local date and time= Wed Aug 31 14:11:04 2022\n",
       "\n",
       "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Tue Aug  2 10:43:50 2022\n",
+      "Simulation @0 s with local date and time= Wed Aug 31 14:11:04 2022\n",
       "\n",
       "Hello, world!\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "hello-world-spawn-at.c\n",
       "hello-world-spawn.c\n",
       "hello-world-spawn.cdc\n",
       "hello-world-spawn.mps\n",
       "hello-world-spawn.mwx\n",
-      "hello-world-spawn.uis\n",
       "hello-world-spawn.vsf\n"
      ]
     },
@@ -389,21 +407,160 @@
    "source": [
     "%%bash\n",
     "\n",
+    "#Compile the code\n",
     "emu-cc -o hello-world-spawn.mwx $FLAGS hello-world-spawn.c\n",
-    "emusim.x --untimed -m 21 --total_nodes 1 -- hello-world-spawn.mwx\n",
-    "ls hello-world-spawn*"
+    "#Note that we are simulating this with at least 4 nodes! This should give us different statistics than the previous examples\n",
+    "emusim.x -m 21 --total_nodes 4 -- hello-world-spawn.mwx\n",
+    "#Then we can print out all the output files that were generated.\n",
+    "ls hello-world-spawn.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can compare the output of the normal Hello World and the Spawn Hello World for the statistics that are different."
+    "### Simple Comparison  \n",
+    "Then we can compare the output of the normal Hello World and the Spawn Hello World for the statistics that are different. The files labeled `*.cdc` have some basic statistics about the simulated system that will change with memory allocation type (naive or replicated) and system size (1 to 8 nodes)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello-world.cdc\n",
+      "hello-world-naive.cdc\n",
+      "hello-world-spawn.cdc\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#Print out all the .cdc files we generated\n",
+    "ls *.cdc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "************************************************\n",
+      "Program Name/Arguments: \n",
+      "hello-world-spawn.mwx \n",
+      "************************************************\n",
+      "Simulator Version: 22.2.22\n",
+      "************************************************\n",
+      "Configuration Details:\n",
+      "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
+      "Number of Nodes=4\n",
+      "Total Memory (in MiB)=8\n",
+      "Logical MSPs per Node=1\n",
+      "Log2 Memory Size per MSP=21\n",
+      "GC Clusters per Node=3\n",
+      "GCs per Cluster=8\n",
+      "Capture queue depths=false\n",
+      "Core Clock=180 MHz, Pd=5.556\n",
+      "Memory DDR4-2133: Bandwidth = 1.886 GiB/s = 2.025 GB/s\n",
+      "SRIO SystemIC bandwidth=2.32 GiB/s (2.5GB/s)\n",
+      "************************************************\n",
+      "PROGRAM ENDED.\n",
+      "Emu system run time 0.000624 sec==624494400 ps\n",
+      "System thread counts:\n",
+      "\tactive=1, created=15, died=14,\n",
+      "\tmax live=4 first occurred @47808552 ps with prog 7.66% complete\n",
+      "\tand last occurred @47808552 ps with prog 11.6% complete\n",
+      "Num_Core_Cycles=112400\n",
+      "Num_SRIO_Cycles=390309\n",
+      "Num_Mem_Cycles=158099\n",
+      "************************************************\n",
+      "************************************************\n",
+      "Simulator wall clock time (seconds): 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "less hello-world-spawn.cdc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note what changes in this file between the normal \"replicated\" Hello World and the \"replicated+spawn\" version of the code.  \n",
+    "* We simulate with a different number of nodes so we used a different amount of memory\n",
+    "* The larger simulation takes a bit longer to run and shows different statistics for the `active` threads and progession."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3c3\n",
+      "< hello-world.mwx \n",
+      "---\n",
+      "> hello-world-spawn.mwx \n",
+      "9,10c9,10\n",
+      "< Number of Nodes=1\n",
+      "< Total Memory (in MiB)=2\n",
+      "---\n",
+      "> Number of Nodes=4\n",
+      "> Total Memory (in MiB)=8\n",
+      "21c21\n",
+      "< Emu system run time 0.000623 sec==623383200 ps\n",
+      "---\n",
+      "> Emu system run time 0.000624 sec==624494400 ps\n",
+      "23,28c23,28\n",
+      "< \tactive=1, created=1, died=0,\n",
+      "< \tmax live=1 first occurred @0 s with prog 0% complete\n",
+      "< \tand last occurred @0 s with prog 0% complete\n",
+      "< Num_Core_Cycles=112200\n",
+      "< Num_SRIO_Cycles=389614\n",
+      "< Num_Mem_Cycles=157818\n",
+      "---\n",
+      "> \tactive=1, created=15, died=14,\n",
+      "> \tmax live=4 first occurred @47808552 ps with prog 7.66% complete\n",
+      "> \tand last occurred @47808552 ps with prog 11.6% complete\n",
+      "> Num_Core_Cycles=112400\n",
+      "> Num_SRIO_Cycles=390309\n",
+      "> Num_Mem_Cycles=158099\n",
+      "31c31\n",
+      "< Simulator wall clock time (seconds): 1\n",
+      "---\n",
+      "> Simulator wall clock time (seconds): 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "diff hello-world.cdc hello-world-spawn.cdc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleanup  \n",
+    "Finally we can clean up our code directory and the output files using the included Makefile in this directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -417,6 +574,16 @@
    ],
    "source": [
     "!make clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises\n",
+    "To further your understanding of this topic we encourage you to try the following:  \n",
+    "1) Restart the notebook and change the memory size and numbers of nodes that are simulated. How do the statistics change?  \n",
+    "2) Investigate the other output files like the `.vsf` file and understand how they are different for different applications. More details on these files can be found in the "
    ]
   }
  ],
