--- a/code/03-saxpy-workflow/NB03-saxpy-workflow.ipynb
+++ b/code/03-saxpy-workflow/NB03-saxpy-workflow.ipynb
@@ -16,13 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/nethome/jyoung9/tmp/lucata-pathfinder-tutorial/code\n",
+      "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n",
+      "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "os.environ[\"USER_NOTEBOOK_CODE\"]=os.environ[\"HOME\"]+\"/pearc-tutorial/code\"\n",
-    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/21.06/bin\",os.environ[\"PATH\"]])"
+    "\n",
+    "#Get the path to where all code samples are\n",
+    "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
+    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.02/bin\",os.environ[\"PATH\"]])\n",
+    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "os.environ[\"X86FLAGS\"] = \"-I/tools/emu/pathfinder-sw/22.02/x86/include/emu_c_utils /tools/emu/pathfinder-sw/22.02/x86/lib/libemu_c_utils.a)\"\n",
+    "os.environ[\"LUCATA_BASE\"]=\"/tools/emu/pathfinder-sw/22.02/\"\n",
+    "\n",
+    "!echo $USER_NOTEBOOK_CODE\n",
+    "#Print out which Emu compiler, emu-cc, we are using\n",
+    "!which emu-cc\n",
+    "#Print out the compiler flags we need to use the Lucata memoryweb headers and library\n",
+    "!echo \"Lucata compilation flags are $FLAGS\""
    ]
   },
   {
@@ -110,36 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "In file included from saxpy-1d-workflow.c:14:0:\n",
-      "/tools/emu/pathfinder-sw/21.06/x86/include/emu_c_utils/memoryweb_x86.h:21:0: warning: \"cilk_migrate_hint\" redefined\n",
-      " #define cilk_migrate_hint(X) (void)(X)\n",
-      " \n",
-      "In file included from saxpy-1d-workflow.c:9:0:\n",
-      "/tools/emu/pathfinder-sw/21.06/include/cilk/cilk.h:84:0: note: this is the location of the previous definition\n",
-      " # define cilk_migrate_hint(x) _Cilk_migrate_hint(x)\n",
-      " \n",
-      "In file included from saxpy-1d-workflow.c:14:0:\n",
-      "/tools/emu/pathfinder-sw/21.06/x86/include/emu_c_utils/memoryweb_x86.h:22:0: warning: \"cilk_spawn_at\" redefined\n",
-      " #define cilk_spawn_at(X) (void)(X); cilk_spawn\n",
-      " \n",
-      "In file included from saxpy-1d-workflow.c:9:0:\n",
-      "/tools/emu/pathfinder-sw/21.06/include/cilk/cilk.h:85:0: note: this is the location of the previous definition\n",
-      " # define cilk_spawn_at(x) cilk_migrate_hint(x); cilk_spawn\n",
-      " \n"
+      "+ gcc-7 -I/tools/emu/pathfinder-sw/22.02/x86/include/emu_c_utils '/tools/emu/pathfinder-sw/22.02/x86/lib/libemu_c_utils.a)' -fcilkplus -DX86 saxpy-1d-workflow.c -o saxpy-1d-workflow-x86\n",
+      "gcc-7: error: /tools/emu/pathfinder-sw/22.02/x86/lib/libemu_c_utils.a): No such file or directory\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "export EMU_BASE=/tools/emu/pathfinder-sw/21.06\n",
-    "gcc-7 -I ${EMU_BASE}/x86/include/emu_c_utils -I ${EMU_BASE}/include -fcilkplus -DX86 saxpy-1d-workflow.c -L ${EMU_BASE}/x86/lib -l emu_c_utils -o saxpy-1d-workflow-x86"
+    "set -x\n",
+    "gcc-7 ${X86FLAGS} -fcilkplus -DX86 saxpy-1d-workflow.c -o saxpy-1d-workflow-x86"
    ]
   },
   {
@@ -297,18 +304,16 @@
     "As an added important note, Eric Hein shares this debugging strategy that builds on the usage of the x86 and simulator models to \n",
     "ensure correct program execution and scaling.\n",
     "\n",
-    "1) Compile on x86 (using memoryweb_x86.h)\n",
-    "2) Run on x86 with a single thread (CILK_NWORKERS=1)\n",
-    "3) Run on x86 multi-threaded\n",
-    "----\n",
-    "4) Compile for Emu\n",
-    "5) Run on emusim in untimed mode (--ignore_starttiming)\n",
-    "6) Run on emusim with randomly initialized memory (--initialize_memory)\n",
-    "7) Run on emusim in timed mode. (starttiming() in code)\n",
-    "-----\n",
-    "8) Run on single-node HW\n",
-    "9) Run on multi-node HW\n",
-    "10) Increase input size gradually. Always use the smallest input set that will finish/recreate the problem in a reasonable amount of time!\n"
+    "1) Compile on x86 (using memoryweb_x86.h)  \n",
+    "2) Run on x86 with a single thread (CILK_NWORKERS=1)  \n",
+    "3) Run on x86 multi-threaded  \n",
+    "4) Compile for Emu  \n",
+    "5) Run on emusim in untimed mode (--ignore_starttiming)  \n",
+    "6) Run on emusim with randomly initialized memory (--initialize_memory)  \n",
+    "7) Run on emusim in timed mode. (starttiming() in code)  \n",
+    "8) Run on single-node HW  \n",
+    "9) Run on multi-node HW  \n",
+    "10) Increase input size gradually. Always use the smallest input set that will finish/recreate the problem in a reasonable amount of time!"
    ]
   },
   {
@@ -332,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python Notebook - CRNCH Tutorial",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -346,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
